# fastapi-to-aws-eks-practice

./: .gitignore  README.md
app/: .envrc.example  .pre-commit-config.yaml  Makefile  pyproject.toml
app/src/: app.py  main.py
app/src/constant/: __init__.py  database.py  endpoint.py
app/src/core/: config.py
app/src/custom/: __init__.py
app/src/custom/database/: __init__.py  check.py
app/src/database/: __init__.py  session.py
app/src/model/: __init__.py  base.py  check.py
app/src/router/: __init__.py  check.py
app/src/router/v1/: __init__.py
app/src/service/: __init__.py  check.py
app/src/sql/check/: readiness.sql
dockerfiles/: .dockerignore
